# agent-app

./: .gitignore  README.md  Takeaways  pyproject.toml
docs/: CHARTER_GAP_CLOSURE.md  DATASET_CONTRACTS.md  DECISIONS.md  EVAL_DATASET_PLAN.md  EXECUTION_PLAN_V1.md  FINAL_GAP_AUDIT_2026-03-06.md  INCIDENT_RUNBOOK_MAILBOX.md  LAUNCH_GATES_OPS.md  OPS_READINESS_CHECKLIST.md  PHASE3_INTERNAL_API.md  PHASE4_DESKTOP_SHELL.md  PHASE5_DESIGN_PARTNER_READINESS.md  PROXY_DATASET_RUNBOOK.md  RELEASE_CANDIDATE_GATES.md  SECRETS_ROTATION_RUNBOOK.md  STARTER_CONCEPT_DICTIONARY_V1.md  STORAGE_CONTRACT_V1.md  V1_EXECUTION_CHARTER.md  V1_QUALITY_GATES.md
framer/: DeltaReviewComponent.tsx  DeltaReviewMobileComponent.tsx  DeltaReviewTabletComponent.tsx
tests/: conftest.py  test_agent_workflow.py  test_auth_flow.py  test_deal_management.py  test_delta_review_render_behavior.py  test_delta_review_route.py  test_design_partner_package.py  test_document_viewer_api.py  test_email_adapter.py  test_eval_gate_rules.py  test_eval_metrics.py  test_extraction_baseline.py  test_freeze.py  test_idempotency.py  test_inbound_gateway.py  test_internal_api_phase3.py  test_internal_api_phase4.py  test_llm_runtime.py  test_normalization_and_policy.py  test_ops_preflight.py  test_outbound_email.py  test_release_gates.py  test_reporting_obligation_corpus_eval.py  test_reporting_obligation_messy_eval.py  test_reporting_obligation_real_eval.py  test_reporting_obligation_verifier_robustness.py  test_retention.py  test_review_queue_endpoint.py  test_runtime_extraction.py  test_runtime_profiles.py  (+8 more)
(+188 files in other folders)
